frontend/index.css
html, body, #root, .App {
  height: 100%;
  margin: 0;
  background-color: #000;
}

.App {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
}

.stats {
    width: 70%;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    text-align: center;
}

h6 {
    font-size: 28px;
    color: #12fff9;
    margin-bottom: 20px;
    margin-top: 0;
}

p {
    font-size: 23px;
    text-align: center;
    margin: 5px;
}

